# test

./: .gitignore  DEPLOY_INSTRUCTIONS.md  MANUAL_DEPLOY.md  QUICK_START.md  README.md  RENDER_DEPLOY.md  amvera.yaml  bot_logs.txt  deploy.ps1  deploy.sh  docker-compose.yml  install.ps1  pyproject.toml  render.yaml  requirements.txt  run.ps1  test.ps1  ВСЕ_ЗАПУЩЕНО.md  ГОТОВО_К_ЗАПУСКУ.md  ДОБАВЛЕНА_ССЫЛКА_НА_БОТА.md  ЗАПУСК_ПРОЕКТА.md  ИЗМЕНЕНИЕ_НА_5X5.md  ИНСТРУКЦИЯ_ДЛЯ_ПОЛЬЗОВАТЕЛЯ.md  ИНСТРУКЦИЯ_ПО_НАСТРОЙКЕ.md  ИСПРАВЛЕНИЕ_ТЕЛЕГРАМ.md  ИТОГОВАЯ_СВОДКА.md  ОПИСАНИЕ_ПРОЕКТА.md  ПЕРЕЗАПУСК_ТЕЛЕГРАМ_БОТА.md  ПОМОЩЬ_С_ENV.md  ПРАВИЛА_ИГРЫ.md  ПРАВИЛА_РАБОТЫ.md  ПРАВИЛА_РАБОТЫ_С_ДАННЫМИ.md  ПРОВЕРКА_ENV.md  ПРОВЕРКА_БОТА.md  ПРОВЕРКА_ПРОЕКТА.md  ПРОДАКШЕН_ГОТОВ.md  ПРОЕКТ_ГОТОВ.md  ПРОЕКТ_ЗАВЕРШЕН.md  РЕКОМЕНДАЦИИ_ДЛЯ_ПРОДАКШЕНА.md  СОЗДАТЬ_ENV_ФАЙЛ.md  (+6 more)
backend/: .gitignore  Dockerfile  requirements.txt  run.ps1
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  limiter.py
backend/app/game/: __init__.py  ai.py  logic.py  promocode.py
backend/tests/: __init__.py  test_ai.py  test_game_logic.py  test_promocode.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  run.ps1
frontend/src/: App.css  App.jsx  index.css
scripts/: get_chat_id.py
src/: __init__.py  main.py
telegram-bot/: Dockerfile  requirements.txt  run.ps1  test_env.py  АВТОМАТИЧЕСКОЕ_ПОЛУЧЕНИЕ_CHAT_ID.md
telegram-bot/bot/: __init__.py  main.py
tests/: __init__.py  test_main.py
(+15 files in other folders)
